Fix bug that made some of the images in cuisines.html to overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,7 +210,7 @@ ul ~ p {
 }
 
 /* Cuisines page styling */
-#menu {
+.menu {
     font-family: 'Roboto Serif' sans-serif;
     font-size: 14px;
 
@@ -231,14 +231,12 @@ ul ~ p {
     grid-template-columns: 1fr;
     gap: 1.5em;
     padding: 1.5em 0;
-}
-
-.menu-item {
-    display: flex;
+    margin: 0 50px;
 }
 
 .menu-item-image {
-    width: 150px;
+    float: left;
+    width: 50%;
     height: 150px;
     object-fit: cover;
     margin-right: 1.5em;
